--- a/post.html
+++ b/post.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng Bài - dikey.vn</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
     <style>
@@ -87,12 +88,29 @@
                 </div>
                 <div class="form-group">
                     <label for="image">Hình ảnh (nếu có)</label>
-                    <input type="file" id="image-input">
+                    <input type="file" id="image-input" accept="image/*">
+                    <div id="image-preview-container" style="margin-top: 10px;"></div>
                 </div>
                 <button type="submit">Đăng Bài</button>
             </form>
         </div>
     </main>
+
+    <!-- Image Editor Modal -->
+    <div id="image-editor-modal" style="display:none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; justify-content: center; align-items: center;">
+        <div style="background: white; padding: 20px; border-radius: 5px; max-width: 90vw; max-height: 90vh;">
+            <h2>Chỉnh sửa ảnh</h2>
+            <div>
+                <img id="image-to-edit" style="max-width: 100%; max-height: 60vh;">
+            </div>
+            <div style="margin-top: 10px;">
+                <button id="rotate-left-btn"><i class="fas fa-undo"></i> Xoay trái</button>
+                <button id="rotate-right-btn"><i class="fas fa-redo"></i> Xoay phải</button>
+                <button id="save-image-btn" style="background: #4CAF50; color: white;">Lưu ảnh</button>
+                <button id="cancel-edit-btn" style="background: #f44336; color: white;">Hủy</button>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <p>&copy; 2025 dikey.vn</p>
@@ -102,6 +120,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
 
     <!-- Scripts -->
     <!-- Firebase SDK -->
