--- a/post-solution.html
+++ b/post-solution.html
@@ -77,6 +77,7 @@
                     <label for="solution-image">Tải lên hình ảnh (tùy chọn)</label>
                     <input type="file" id="solution-image" accept="image/*">
                     <div id="image-preview-container" style="margin-top: 10px;"></div>
+                    <button type="button" id="edit-image-btn" class="btn" style="display:none; margin-top: 10px;">Sửa ảnh</button>
                 </div>
                 <button type="submit" class="btn btn-primary">Gửi Lời Giải</button>
             </form>
