--- a/quiz-list.html
+++ b/quiz-list.html
@@ -48,7 +48,7 @@
     <script src="js/header.js"></script>
     <script src="js/auth.js"></script>
     <main>
-        <h1>Danh sách Trắc nghiệm</h1>
+        <h1> Hãy học thêm chút kiến thức nào  </h1>
         <div id="quiz-list-container">
             <!-- Quiz items will be loaded here -->
         </div>
@@ -61,4 +61,5 @@
     <script src="js/quiz-list.js"></script>
 
 </body>
+
 </html>
