--- a/quiz-list.html
+++ b/quiz-list.html
@@ -48,7 +48,7 @@
     <script src="js/header.js"></script>
     <script src="js/auth.js"></script>
     <main>
-        <h1> Hãy học thêm chút kiến thức nào  </h1>
+        <h1> Hãy học thêm chút kiến thức nào <a href="create-quiz.html" class="btn">Tạo trắc nghiệm của bạn</a> </h1>
         <div id="quiz-list-container">
             <!-- Quiz items will be loaded here -->
         </div>
@@ -63,3 +63,4 @@
 </body>
 
 </html>
+
