--- a/quiz-list.html
+++ b/quiz-list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Danh sách Khảo sát</title>
+    <title>Trắc nghiệm tri thức</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/quiz-list.css">
 </head>
@@ -48,7 +48,7 @@
     <script src="js/header.js"></script>
     <script src="js/auth.js"></script>
     <main>
-        <h1> Hãy học thêm chút kiến thức nào <a href="create-quiz.html" class="btn">Tạo trắc nghiệm của bạn</a> </h1>
+        <h3> Hãy học thêm chút kiến thức nào </h3> <a href="create-quiz.html" class="btn">Tạo trắc nghiệm của bạn</a>
         <div id="quiz-list-container">
             <!-- Quiz items will be loaded here -->
         </div>
@@ -63,4 +63,5 @@
 </body>
 
 </html>
+
 
