--- a/create-quiz.html
+++ b/create-quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tạo Khảo sát Tri thức</title>
+    <title>Tạo Trắc nghiệm Tri thức</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/create-quiz.css">
 </head>
@@ -56,7 +56,7 @@
     <script src="js/header.js"></script>
     <script src="js/auth.js"></script>
     <main>
-        <h1>Tạo Trắc nghiệm</h1>
+        <h3>Tạo Trắc nghiệm của riêng bạn và đố mọi người</h3>
         <form id="create-quiz-form">
             <div class="form-group">
                 <label for="quiz-question">Câu hỏi</label>
@@ -92,3 +92,4 @@
 </body>
 
 </html>
+
