--- a/wall.html
+++ b/wall.html
@@ -90,6 +90,11 @@
                     <h2 id="profile-name">Tên người dùng</h2>
                     <p id="profile-email">email@example.com</p>
                     <p>Điểm: <span id="profile-score">0</span></p>
+                    <div id="profile-stats" class="profile-stats">
+                        <p>Sức mạnh: <span id="profile-power">0</span></p>
+                        <p>Máu: <span id="profile-health">0</span></p>
+                        <p>Phòng thủ: <span id="profile-defense">0</span></p>
+                    </div>
                     <div class="profile-actions">
                         <button class="btn" id="add-friend-btn"><i class="fas fa-user-plus"></i> Kết bạn</button>
                         <button class="btn" id="follow-btn"><i class="fas fa-rss"></i> Theo dõi</button>
