--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <main class="main-content">
             <div class="welcome-section">
                 
-                <h2> Học, học nữa, học mãi,..! </h2>
+                <h2 id="welcome-title"> Học, học nữa, học mãi,..! </h2>
                 <p>Bạn muốn biết điều gì? <a href="post.html" class="btn">Đăng bài</a></p>
                 
             </div>
