--- a/post.html
+++ b/post.html
@@ -56,19 +56,38 @@
                 <div class="form-group-row">
                     <div class="form-group">
                         <label for="category-select">Loại môn</label>
-                        <select id="category-select" required>
-                            <option value="">-- Chọn loại môn --</option>
-                            <option value="toan">Toán học</option>
-                            <option value="ly">Vật lý</option>
-                            <option value="hoa">Hóa học</option>
-                            <option value="van">Văn học</option>
-                            <option value="anh">Tiếng anh</option>
-                            <option value="sinh">Sinh học</option>
-                            <option value="su">Lịch sử</option>
-                            <option value="dia">Địa lý</option>
-                            <option value="tin">Tin học</option>
-                            <option value="khac">Khác</option>
-                        </select>
+                        <select name="subject_id" class="search_select width_select_form" required="" id="category-select" fdprocessedid="6k4vsk"> 
+ <option value="" selected="selected">== Lựa chọn môn học ==</option> 
+ <option value="19">Âm nhạc</option> 
+ <option value="18">Mỹ thuật</option> 
+ <option value="1">Toán học</option> 
+ <option value="2">Vật lý</option> 
+ <option value="3">Hóa học</option> 
+ <option value="4">Ngữ văn</option> 
+ <option value="101">Tiếng Việt</option> 
+ <option value="5">Tiếng Anh</option> 
+ <option value="102">Đạo đức</option> 
+ <option value="17">Khoa học</option> 
+ <option value="6">Lịch sử</option> 
+ <option value="7">Địa lý</option> 
+ <option value="8">Sinh học</option> 
+ <option value="9">Tin học</option> 
+ <option value="103">Lập trình</option> 
+ <option value="10">Công nghệ</option> 
+ <option value="11">Giáo dục thể chất</option> 
+ <option value="12">Giáo dục Công dân</option> 
+ <option value="13">Giáo dục Quốc phòng và An ninh</option> 
+ <option value="14">Ngoại ngữ khác</option> 
+ <option value="15">Xác suất thống kê</option> 
+ <option value="16">Tài chính tiền tệ</option> 
+ <option value="20">Giáo dục kinh tế và pháp luật</option> 
+ <option value="21">Hoạt động trải nghiệm</option> 
+ <option value="23">Khoa học tự nhiên</option> 
+ <option value="24">Khoa học xã hội</option> 
+ <option value="25">Tự nhiên &amp; xã hội</option> 
+ <option value="26">Bằng lái xe</option> 
+ <option value="100">Tổng hợp</option> 
+ </select>
                     </div>
                     <div class="form-group">
                         <label for="grade-select">Trình độ lớp</label>
