--- a/create-quiz.html
+++ b/create-quiz.html
@@ -63,6 +63,66 @@
                 <textarea id="quiz-question" required></textarea>
             </div>
             <div class="form-group">
+                <label for="quiz-category">Môn học</label>
+                <select id="quiz-subject" required>
+                    <option value="" selected="selected">== Lựa chọn môn học ==</option> 
+                    <option value="19">Âm nhạc</option> 
+                    <option value="18">Mỹ thuật</option> 
+                    <option value="1">Toán học</option> 
+                    <option value="2">Vật lý</option> 
+                    <option value="3">Hóa học</option> 
+                    <option value="4">Ngữ văn</option> 
+                    <option value="101">Tiếng Việt</option> 
+                    <option value="5">Tiếng Anh</option> 
+                    <option value="102">Đạo đức</option> 
+                    <option value="17">Khoa học</option> 
+                    <option value="6">Lịch sử</option> 
+                    <option value="7">Địa lý</option> 
+                    <option value="8">Sinh học</option> 
+                    <option value="9">Tin học</option> 
+                    <option value="103">Lập trình</option> 
+                    <option value="10">Công nghệ</option> 
+                    <option value="11">Giáo dục thể chất</option> 
+                    <option value="12">Giáo dục Công dân</option> 
+                    <option value="13">Giáo dục Quốc phòng và An ninh</option> 
+                    <option value="14">Ngoại ngữ khác</option> 
+                    <option value="15">Xác suất thống kê</option> 
+                    <option value="16">Tài chính tiền tệ</option> 
+                    <option value="20">Giáo dục kinh tế và pháp luật</option> 
+                    <option value="21">Hoạt động trải nghiệm</option> 
+                    <option value="23">Khoa học tự nhiên</option> 
+                    <option value="24">Khoa học xã hội</option> 
+                    <option value="25">Tự nhiên &amp; xã hội</option> 
+                    <option value="26">Bằng lái xe</option> 
+                    <option value="100">Tổng hợp</option> 
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="quiz-grade">Lớp</label>
+                <select id="quiz-grade" name="quiz-grade" required class="search_select mgleft10"> 
+                    <option value="" selected="selected">== Chọn trình độ lớp ==</option> 
+                    <option value="13">Đại học</option> 
+                    <optgroup label="Cấp 3 (Trung học phổ thông)"> 
+                    <option value="12">- Lớp 12</option> 
+                    <option value="11">- Lớp 11</option> 
+                    <option value="10">- Lớp 10</option> 
+                    </optgroup> 
+                    <optgroup label="Cấp 2 (Trung học cơ sở)"> 
+                    <option value="9">- Lớp 9</option> 
+                    <option value="8">- Lớp 8</option> 
+                    <option value="7">- Lớp 7</option> 
+                    <option value="6">- Lớp 6</option> 
+                    </optgroup> 
+                    <optgroup label="Cấp 1 (Tiểu học)"> 
+                    <option value="5">- Lớp 5</option> 
+                    <option value="4">- Lớp 4</option> 
+                    <option value="3">- Lớp 3</option> 
+                    <option value="2">- Lớp 2</option> 
+                    <option value="1">- Lớp 1</option> 
+                    </optgroup> 
+                </select>
+            </div>
+            <div class="form-group">
                 <label for="quiz-image">Ảnh (tùy chọn)</label>
                 <input type="file" id="quiz-image" accept="image/*">
             </div>
@@ -92,4 +152,3 @@
 </body>
 
 </html>
-
