--- a/quiz-detail.html
+++ b/quiz-detail.html
@@ -42,15 +42,47 @@
     right: 0;
     left: auto;
   }
+  
+    button {
+    display: inline-block;
+    background-color: #f0f0f0;
+    color: #000000;
+    padding: 0.8rem 1.5rem;
+    border: none;
+    border-radius: 0px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 100;
+    transition: background-color 0.3s;
+}
+    
         }
     </style>
 <body>
     <script src="js/header.js"></script>
     <script src="js/auth.js"></script>
     <main>
-        <div id="author-info"></div>
-        <div id="quiz-detail-container">
-            <!-- Quiz detail will be loaded here -->
+        <div class="quiz-page-container">
+            <div class="side-column" id="correct-solvers-container">
+                <span class="close-btn">&times;</span>
+                <h3>Người trả lời đúng</h3>
+                <div id="correct-solvers"></div>
+            </div>
+            <div class="main-column">
+            <div class="mobile-solver-buttons">
+                <button id="show-correct-solvers">Người trả lời đúng</button>
+                <button id="show-incorrect-solvers">Người trả lời sai</button>
+            </div>
+            <div id="author-info"></div>
+                <div id="quiz-detail-container">
+                    <!-- Quiz detail will be loaded here -->
+                </div>
+            </div>
+            <div class="side-column" id="incorrect-solvers-container">
+                <span class="close-btn">&times;</span>
+                <h3>Người trả lời sai</h3>
+                <div id="incorrect-solvers"></div>
+            </div>
         </div>
         <button id="next-quiz-btn" style="display: none;">Câu hỏi khác</button>
     </main>
