--- a/fun-quiz-list.html
+++ b/fun-quiz-list.html
@@ -57,7 +57,7 @@
     <script src="js/header.js"></script>
     <script src="js/auth.js"></script>
     <main>
-        <h3>Xả hơi tý nào</h3>
+        <h3>Xả hơi tý nào hoặc tạo câu đố của bạn</h3> <a herf='./create-fun-quiz.html'><p>Tạo câu đố</p> </a>
         <div id="quiz-list-container"></div>
     </main>
     <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-app-compat.js"></script>
@@ -68,4 +68,5 @@
     <script src="js/firebase-config.js"></script>
     <script src="js/fun-quiz-list.js"></script>
 </body>
+
 </html>
