--- a/baitap/gia-su-co-phan-ung-hoa-hoc-giua-chat-a-chat-b-va-chat-c-tao-ra-chat-d-thi-ma-mb-mc-md-la-dung-hay-sai.html
+++ b/baitap/gia-su-co-phan-ung-hoa-hoc-giua-chat-a-chat-b-va-chat-c-tao-ra-chat-d-thi-ma-mb-mc-md-la-dung-hay-sai.html
@@ -14,15 +14,16 @@
             // Ngăn nút back
             history.pushState(null, "", location.href);
             window.onpopstate = () => {
-                location.replace("./detail.html?id=-OdaicM9ygKxPOrLBgVF");
+                location.replace("./dikey.vn/detail.html?id=-OdaicM9ygKxPOrLBgVF");
             };
 
             // Tự chuyển ngay lập tức
-            location.replace("./detail.html?id=-OdaicM9ygKxPOrLBgVF");
+            location.replace("./dikey.vn/detail.html?id=-OdaicM9ygKxPOrLBgVF");
         };
     </script>
 </head>
 <body style="background: #fff;">
 </body>
 </html>
+
 
