--- a/baitap/hien-tai-ban-nam-da-de-danh-duoc-mot-so-tien-la-800-000-dong-ban-nam-dang-co-y-dinh-mua-mot-chiec-xe-dap-tri-gia-2-640-000-dong-nen-hang-ngay-ban-nam-deu-de-danh-ra-20-000-dong-goi-m-dong-la-so-tien-ban-nam-tiet-kiem-duoc-sau-t-ngay.html
+++ b/baitap/hien-tai-ban-nam-da-de-danh-duoc-mot-so-tien-la-800-000-dong-ban-nam-dang-co-y-dinh-mua-mot-chiec-xe-dap-tri-gia-2-640-000-dong-nen-hang-ngay-ban-nam-deu-de-danh-ra-20-000-dong-goi-m-dong-la-so-tien-ban-nam-tiet-kiem-duoc-sau-t-ngay.html
@@ -13,14 +13,15 @@
             // Ngăn nút back
             history.pushState(null, "", location.href);
             window.onpopstate = () => {
-                location.replace("/detail.html?id=-OdYy4VieWWFxIuYu1J6");
+                location.replace("./detail.html?id=-OdYy4VieWWFxIuYu1J6");
             };
 
             // Tự chuyển ngay lập tức
-            location.replace("/detail.html?id=-OdYy4VieWWFxIuYu1J6");
+            location.replace("./detail.html?id=-OdYy4VieWWFxIuYu1J6");
         };
     </script>
 </head>
 <body style="background: #fff;">
 </body>
 </html>
+
