--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             <div id="posts-container">
                 <!-- Các bài tập sẽ được tải vào đây bằng JavaScript -->
             </div>
+            <div id="load-more-container"></div>
         </main>
 
         <aside class="sidebar right-sidebar">
